# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.5.xx
DATE xx/xx/2009
29th Alpha Release

NEWS:

NEW: [features/improvements]
+Add Hungarian, Romanian, and Slovak translations.

BUG FIXES:
+Fix error in handling BOM when saving files that could result in data loss.
+Use wxversion to make sure that Editra is started with wxPython2.8 or later.

#-----------------------------------------------------------------------------#

VERSION 0.5.0
DATE 08/20/2009
28th Alpha Release

NEWS:

This release contains a large number of important bug fixes. Due to various
outside issues that have limited my development time the last few monthes I have
decided to change the focus to bug fixes for this release and most of the 
features I had slated for 0.5 have been pushed back to the later 0.5 series 
releases in order focus on stability for 0.5.

NEW: [features/enhancements]
+BackTab can no be used to compress space that is embedded in a line.
+Record position changes from mouse clicks in position navigation history.
+Add command line switch -g for specifying line to open file to.

BUG FIXES:
+Fix copying from OutputBuffer.
+Fix some error handling if file session handling.
+Fix some minor translation issues.
+Don't reposition caret if it was moved during a threaded load operation.
+Fix some errors with setting custom highlighting colors.
+Set highlight foreground colour to White when selection colour is dark.
+Fix search in directory message handler in search controller that caused
 some issues when the dialog had already been created.
+Fix search in directory crash on windows when accessing it from filebrowser.
+Files with embedded NUL bytes can now be loaded properly.
+Properly handle filenames that have spaces in them in the Launch plugin.